@@ -52,6 +52,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - The export config subcommand should not display real value for field reference. {pull}8769[8769]
 - Fix bug in loading dashboards from zip file. {issue}8051[8051]
 - The setup command will not fail if no dashboard is available to import. {pull}8977[8977]
+- Fix central management configurations reload when a configuration is removed in Kibana. {issue}9010[9010]
 
 *Auditbeat*
 
